unpackaged/main/default/objects/Framework__Registry__mdt/Framework__Registry__mdt.object-meta.xml
<CustomObject>
    <label>Fonteva Registry Entry</label>
    <pluralLabel>Fonteva Registry Entries</pluralLabel>
</CustomObject>