unpackaged/main/default/objects/Framework__Registry__mdt/fields/Framework__Category__c.field-meta.xml
<CustomField>
    <fullName>Framework__Category__c</fullName>
    <description>todo</description>
    <inlineHelpText>todo</inlineHelpText>
    <label>Entry Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>