unpackaged/main/default/objects/Framework__Registry__mdt/fields/Framework__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Framework__Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>todo</description>
    <inlineHelpText>todo</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>