unpackaged/main/default/objects/Framework__Registry__mdt/fields/Framework__Key__c.field-meta.xml
<CustomField>
    <fullName>Framework__Key__c</fullName>
    <description>todo</description>
    <inlineHelpText>todo</inlineHelpText>
    <label>Entry Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>