unpackaged/main/default/objects/Framework__Registry__mdt/fields/Framework__Value__c.field-meta.xml
<CustomField>
    <fullName>Framework__Value__c</fullName>
    <description>todo</description>
    <inlineHelpText>todo</inlineHelpText>
    <label>Entry Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>